<resources>
    <string name="app_name">Digital TB Notification Tool</string>
    <!--Other string resources also defined in this file… -->
    <string name="FirstName">FirstName</string>
    <string name="LastName">LastName</string>
    <string name="Age">Age</string>
    <string name="gender">gender</string>
    <string name="diseaseType">diseaseType</string>
    <string name="district">district</string>
    <string name="SEND">SEND</string>

    <string name="Password">Password</string>
    <string name="Name">Name</string>
    <string name="ConfirmPassword">ConfirmPassword</string>
    <string name="username">username</string>
    <string name="Login">Login</string>
    <string name="signup">signup</string>






    <string-array name="category">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="disease">
        <item>Type of Disease</item>
        <item>Bac-confirmed Pulmonary</item>
        <item>Clinically diagnosed pulmonary</item>
        <item>Extra Pulmonary</item>
    </string-array>

    <string-array name="district">
        <item>Select District</item>
        <item>Attock</item>
        <item>Bahawalnagar</item>
        <item>Bahawalpur</item>
        <item>Bhakkar</item>
        <item>Chakwal</item>
        <item>Chiniot</item>
        <item>D.G.Khan</item>
        <item>Faisalabad</item>
        <item>Gujranwala</item>
        <item>Gujrat</item>
        <item>Hafizabad</item>
        <item>Jhang</item>
        <item>Jhelum</item>
        <item>Kasur</item>
        <item>Khanewal</item>
        <item>Khushab</item>
        <item>Lahore</item>
        <item>Layyah</item>
        <item>Lodhran</item>
        <item>Mandi Baha ud din</item>
        <item>Mianwali</item>
        <item>Multan</item>
        <item>Muzaffargarh</item>
        <item>Nankana Sahib</item>
        <item>Narowal</item>
        <item>Okara</item>
        <item>Pakpattan</item>
        <item>Rahim Yar Khan</item>
        <item>Rajanpur</item>
        <item>Rawalpindi</item>
        <item>Sahiwal</item>
        <item>Sargodha</item>
        <item>Sheikhupura</item>
        <item>Sialkot</item>
        <item>Toba Tek Singh</item>
        <item>Vehari</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="remember_me">Remember Me</string>
</resources>
