<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.testing.yasir.userinterface.login">

    <EditText
        android:id="@+id/uname"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:cursorVisible="true"
        android:hint="@string/username"
        android:textSize="18sp"
        android:inputType="textPersonName"></EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:textSize="18sp"
        android:cursorVisible="true"
        android:hint="@string/Password"
        android:inputType="textPassword"></EditText>

    <CheckBox
        android:id="@+id/checkme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
    <Button
        android:id="@+id/Blogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/custom_button_design"
        android:text="@string/Login"
        android:onClick="onButtonclick"
        android:textColor="@color/lightgrayline"
        android:textSize="16sp"
        >

    </Button>

    <Button
        android:id="@+id/Bsignup"
        android:layout_width="120dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/custom_button_design"
        android:text="@string/signup"
        android:textColor="@color/lightgrayline"
        android:onClick="onButtonclick"

        android:textSize="16sp"
        >

    </Button>



</LinearLayout>
